# dotfiles

./: .gitconfig  .gitignore  .macos  .zshenv  .zshrc  README.md  bootstrap.ps1  brew.sh  pyproject.toml  update.sh
.config/: starship.toml
.config/Code/User/: settings.json
.config/configstore/: update-notifier-npm.json
.config/power_toys/: settings.json  settings_133799567925883766.ptb
.config/terminal/: settings.json
.pwsh/: powershell_profile.ps1  starship.ps1
.zsh/: starship.zsh
app/: main.py
cfg/Alfred.alfredpreferences/preferences/features/filesearch/open/: prefs.plist
cfg/Alfred.alfredpreferences/preferences/features/system/: prefs.plist
cfg/Alfred.alfredpreferences/preferences/local/a7c4e78f65457cc9b78170be5ddf923468db60f5/appearance/: prefs.plist
cfg/Alfred.alfredpreferences/remote/pages/: 4A8F75D7-41BF-4151-A18E-C5E346C51DBF.data  803A23E0-E44C-4444-B086-F18B7C6BE04A.data  D14ECC38-80E9-41D9-AAF8-9124EB48E37F.data
cfg/Alfred.alfredpreferences/workflows/user.workflow.A14775CE-F738-4B0F-9F3A-FA1FD9B3C042/: info.plist
dotfiles/linux/: .gitconfig  .zshrc
dotfiles/macos/: .macos  .nanorc  bootstrap.sh
dotfiles/macos/.zsh/: aliases.zsh  keybindings.zsh  starship.zsh
dotfiles/macos/cfg/: Dracula+.terminal
dotfiles/macos/cfg/Alfred.alfredpreferences/remote/pages/: 6A28C96A-90EF-4B38-9F0B-11EF09FDEA9C.data  76227781-EC8A-4C28-A450-7E7BCF8DBE3B.data  (+2 more)
dotfiles/windows/.config/terminal/: settings.json  state.json
fancontrol/: CurveGPU.json
iTerm/: com.googlecode.iterm2.plist
power_toys/: settings.json
terminal/: settings.json
(+1 files in other folders)
