[project]
name = "dotfiles"
version = "0.1.0"
description = "Dotfiles Installer is a cross-platform tool designed to simplify the setup and synchronization of configuration files (dotfiles) across macOS, Linux, and Windows"
authors = [
    {name = "2rage",email = "the2rage@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
